[project]
name = "moniker"
version = "1.1.0"
description = "Monitor usernames across several platforms and report availability."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "loguru-discord>=1.4.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "discord-webhook>=1.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
]

[tool.ruff.lint]
select = ["I"]
